--- a/CV_perso.css
+++ b/CV_perso.css
@@ -1,1 +1,124 @@
 
+body{
+    font-family: sans-serif;
+    width: 60%;
+    margin: 0 auto;
+    text-align: justify;
+    font-size:18pt;
+    background:linear-gradient(rgb(0, 128, 117),rgb(192, 247, 229),rgb(0, 128, 117)) 
+}
+header{
+    text-align: center;
+}
+header h3{
+    text-align:center;
+    font-size: 20pt;
+    color: rgb(184, 245, 221);
+    text-decoration: underline;
+}
+.photo{
+    display: block;
+    height:325px; 
+    width:250px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10%;
+}
+h1{
+    text-align: center;
+    color: green;
+    font-size: 30pt;
+    text-decoration: underline;
+    
+}
+h2{
+    border-bottom-style: double;
+    border-top-style:double;
+    border-color: green;
+    text-align: left;
+    padding-bottom: 1%;
+    padding-top:1%;
+    color: green;
+    font-size: 24pt;
+    margin-bottom: 5%;
+    margin-top:5%
+}
+
+h3{
+    margin-left: 10%;
+    font-size: 20pt;
+    color: rgb(80, 156, 80);
+    text-decoration: underline;
+}
+.logoFr{
+    width: 25px;
+    height: 25px;
+    float: left;
+}
+
+.logoEn{
+    width: 30px;
+    height: 30px;
+    float: left;
+}
+
+.logoSp{
+    width: 25px;
+    height: 25px;
+    float: left;
+   
+}
+.langue{
+    margin-left: 10px;
+}
+
+input{
+    display:block;
+    text-align: center;
+    font-size:24pt;
+    margin-right: auto;
+    margin-left:auto;
+}
+
+.date{
+    text-decoration: underline;
+    margin-top: 5%;
+    margin-right: 1%;
+}
+
+
+
+div{
+    font-weight: bold;
+    
+}
+.precision, .employeur, .contrat{
+    text-align: center;
+    display: block;
+    margin-top: 2%;
+    font-weight: normal;
+    color:grey;
+}
+
+.employeur{
+    font-style: italic;
+    color:rgb(59, 59, 59);
+}
+
+p{
+    column-count: auto;
+}
+
+footer{
+    border-top-style: solid;
+    text-align: center;
+    color:rgb(59, 59, 59);
+}
+
+.dateW3C{
+    font-style: italic;
+}
+
+
+
+
