--- a/print.css
+++ b/print.css
@@ -1,15 +1,3 @@
-.impression{
+.impression, header, footer, .haut{
     display : none;
-  }
-
-header{
-    display : none;
-}
-
-footer{
-    display : none;
-}
-
-.haut{
-    display: none;
 }
