--- a/CV_perso.css
+++ b/CV_perso.css
@@ -1,29 +1,28 @@
-
 body{
     font-family: sans-serif;
-    width: 60%;
+    width: 80%;
     margin: 0 auto;
     text-align: justify;
     font-size:18pt;
     background:linear-gradient(rgb(0, 128, 117),rgb(192, 247, 229),rgb(0, 128, 117)) 
 }
+
 header{
     text-align: center;
 }
+
 header h3{
-    text-align:center;
     font-size: 20pt;
     color: rgb(184, 245, 221);
     text-decoration: underline;
 }
-.photo{
-    display: block;
-    height:325px; 
-    width:250px;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 10%;
+
+footer{
+    border-top-style: solid;
+    text-align: left;
+    color:rgb(59, 59, 59);
 }
+
 h1{
     text-align: center;
     color: green;
@@ -41,35 +40,33 @@ h2{
     color: green;
     font-size: 24pt;
     margin-bottom: 5%;
-    margin-top:5%
+    margin-top:5%;
+    clear: both;
 }
 
-h3{
+div h3{
     margin-left: 10%;
     font-size: 20pt;
     color: rgb(80, 156, 80);
     text-decoration: underline;
 }
-.logoFr{
-    width: 25px;
-    height: 25px;
-    float: left;
+p, ul, .div_langue{
+    font-weight: bold;
+    padding-right: 2%;
+    padding-left: 2%;
+    padding-bottom: 2%;
+    padding-top: 2%;
+    background-color: rgb(149, 204, 201);
+    border-radius: 20px;  
 }
 
-.logoEn{
-    width: 30px;
-    height: 30px;
-    float: left;
+li{
+    margin-bottom: 1%;
+    margin-left: 2%;  
 }
 
-.logoSp{
-    width: 25px;
-    height: 25px;
-    float: left;
-   
-}
-.langue{
-    margin-left: 10px;
+li .divers{
+    font-weight: normal;
 }
 
 input{
@@ -80,45 +77,79 @@ input{
     margin-left:auto;
 }
 
-.date{
+button{
+    display:block;
+    height: 30px;
+    background-color: green; 
+    color : white; 
+    border-radius: 5px;
+    font-size: 12pt;
+    float: right;
+}
+
+.haut{
+    display: block;
+    font-size: 14pt;
+    margin-bottom: 2%;
+    float: right;
+}
+
+.photo{
+    display: block;
+    height:325px; 
+    width:250px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10%;
+}
+
+.logoEn{
+    display: block;
+    width: 35px;
+    height: 35px;
+    float: left;
+}
+
+.logoSp, .logoFr{
+    display: block;
+    width: 30px;
+    height: 30px;
+    float: left; 
+}
+
+.date, .perso{
     text-decoration: underline;
     margin-top: 5%;
     margin-right: 1%;
-}
-
-
-
-div{
-    font-weight: bold;
-    
-}
-.precision, .employeur, .contrat{
-    text-align: center;
-    display: block;
-    margin-top: 2%;
-    font-weight: normal;
-    color:grey;
-}
-
-.employeur{
-    font-style: italic;
-    color:rgb(59, 59, 59);
-}
-
-p{
-    column-count: auto;
-}
-
-footer{
-    border-top-style: solid;
-    text-align: center;
-    color:rgb(59, 59, 59);
 }
 
 .dateW3C{
     font-style: italic;
 }
 
+.precision, .employeur, .contrat{
+    text-align: right;
+    display: block;
+    margin-top: 2%;
+    font-weight: normal;
+    color:rgb(59, 59, 59);
+}
+
+.employeur, .contrat{
+    font-style: italic;
+    color:grey;
+}
 
 
+.langue{
+    margin-left: 10px;
+}
 
+.div_langue{
+    column-count: 3;
+    column-width: 40% 25% 25%;
+}
+
+.langages{
+    column-count: 2;
+}
