--- a/Style/CV_perso.css
+++ b/Style/CV_perso.css
@@ -153,3 +153,16 @@ button{
 .langages{
     column-count: 2;
 }
+
+.telecharger{
+    font-weight: bold;
+    border-style: solid;
+    border-width: 1px;
+    border-color: grey;
+    border-radius:10px;
+    background-color: white;
+    padding: 0.5%;
+    margin: 45%;
+    text-decoration: none;
+    color: black;
+}
