--- a/Style/CV_perso.css
+++ b/Style/CV_perso.css
@@ -155,14 +155,15 @@ button{
 }
 
 .telecharger{
-    font-weight: bold;
+    font-weight: normal;
     border-style: solid;
     border-width: 1px;
     border-color: grey;
     border-radius:10px;
     background-color: white;
     padding: 0.5%;
-    margin: 45%;
+    margin-left: 45%;
     text-decoration: none;
     color: black;
+    text-align: center;
 }
